Improves theme title

--- a/seantis/dir/events/themes/izug-theme/theme.html
+++ b/seantis/dir/events/themes/izug-theme/theme.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>izug.seantis.dir.events diazo theme</title>
+        <title>Seantis Dir Events for iZug Basetheme</title>
     </head>
     <body>
-        <h1 id="title">seantis.dir.events for iZug</h1>
+        <h1 id="title">Seantis Dir Events for iZug Basetheme</h1>
         <div id="content">
             <!-- placeholder -->
         </div>
